--- a/style.css
+++ b/style.css
@@ -11,90 +11,133 @@ body {
     height: 100vh;
 }
 
-.container {
-    position: relative;
-    /* Actually hides the remainder of a page */
-    overflow: hidden;
-    width: 100vw;
-    height: 100vh;
+@media screen and (max-width: 1900px) {
+    .container {
+        position: relative;
+        /* Actually hides the remainder of a page */
+        overflow: hidden;
+        width: 100vw;
+        height: 100vh;
+    }
+
+    .sidebar {
+        height: 100%;
+        width: 35%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: transform 0.5s ease-in-out;
+    }
+
+    .sidebar>div {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+    }
+
+    .sidebar h1 {
+        font-size: 40px;
+        margin-bottom: 10px;
+        margin-top: -30px;
+    }
+
+    .main-slide {
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 35%;
+        width: 65%;
+        transition: transform 0.5s ease-in-out;
+    }
+
+    .main-slide>div {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        height: 100%;
+        width: 100%;
+    }
+
+    button {
+        background-color: #fff;
+        border: none;
+        color: #aaa;
+        cursor: pointer;
+        font-size: 16px;
+        padding: 15px;
+    }
+
+    button:hover {
+        color: #222;
+    }
+
+    button:focus {
+        outline: none;
+    }
+
+    .container .controls button {
+        position: absolute;
+        left: 35%;
+        top: 50%;
+        z-index: 100;
+    }
+
+    .container .controls .down-button {
+        transform: translateX(-100%);
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+    }
+
+    .container .controls .up-button {
+        transform: translateY(-100%);
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+    }
 }
 
-.sidebar {
-    height: 100%;
-    width: 35%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: transform 0.5s ease-in-out;
-}
+@media screen and (max-width: 600px) {
+    .container {
+        position: relative;
+        /* Actually hides the remainder of a page */
+        overflow: hidden;
+        width: 100vw;
+        height: 100vh;
+    }
 
-.sidebar>div {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-}
+    .sidebar {
+        position: relative;
+        width: 0;
+        height: 0;
+        display: none;
+    }
 
-.sidebar h1 {
-    font-size: 40px;
-    margin-bottom: 10px;
-    margin-top: -30px;
-}
+    .main-slide {
+        height: 100vh;
+        width: 100vw;
+        transition: transform 0.5s ease-in-out;
+        display: flex;
+        flex-shrink: 0;
+        left: 0;
+    }
 
-.main-slide {
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 35%;
-    width: 65%;
-    transition: transform 0.5s ease-in-out;
-}
+    .main-slide>div {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        height: 100vh;
+        min-width: 100vw;
+    }
 
-.main-slide>div {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: 100%;
-    width: 100%;
-}
+    button {
+        display: none;
+    }
 
-button {
-    background-color: #fff;
-    border: none;
-    color: #aaa;
-    cursor: pointer;
-    font-size: 16px;
-    padding: 15px;
-}
 
-button:hover {
-    color: #222;
+    .container .controls {
+        display: none;
+    }
 }
-
-button:focus {
-    outline: none;
-}
-
-.container .controls button {
-    position: absolute;
-    left: 35%;
-    top: 50%;
-    z-index: 100;
-}
-
-.container .controls .down-button {
-    transform: translateX(-100%);
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-}
-
-.container .controls .up-button {
-    transform: translateY(-100%);
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-
-@media screen {}
