--- a/style.css
+++ b/style.css
@@ -165,10 +165,17 @@ body {
 
     .progress-section {
         border-radius: 80px;
-        margin: 0 .05rem;
+        margin: 0 .075rem;
         background-color: #7A7A7A;
         height: .25rem;
         z-index: inherit;
         /* animation: background-size 8s linear 0s infinite alternate; */
+    }
+
+    .progress-section_playmask {
+        height: 100%;
+        background-color: lavenderblush;
+        width: 0;
+        border-radius: 80px;
     }
 }
