--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ body {
         transition: transform 0.5s ease-in-out;
     }
 
-    .sidebar>div {
+    .sidebar > div {
         height: 100%;
         width: 100%;
         display: flex;
@@ -54,7 +54,7 @@ body {
         transition: transform 0.5s ease-in-out;
     }
 
-    .main-slide>div {
+    .main-slide > div {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
@@ -124,14 +124,14 @@ body {
         left: 0;
     }
 
-    .main-slide>div {
+    .main-slide > div {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
         height: 100vh;
         /* So that flex won't shrink it. Fles-shrink itself isn't enough */
         min-width: 100vw;
-         /* Minimal padding-top of progress bar height + y-axis margins */
+        /* Minimal padding-top of progress bar height + y-axis margins */
         padding-top: 1rem;
         z-index: -10;
     }
@@ -139,7 +139,6 @@ body {
     button {
         display: none;
     }
-
 
     .container .controls {
         display: none;
@@ -150,7 +149,7 @@ body {
         width: 100vw;
         justify-content: center;
         align-items: center;
-        margin-top: .5rem;
+        margin-top: 0.5rem;
         position: static;
         z-index: 10;
     }
@@ -165,9 +164,9 @@ body {
 
     .progress-section {
         border-radius: 80px;
-        margin: 0 .075rem;
-        background-color: #7A7A7A;
-        height: .25rem;
+        margin: 0 0.075rem;
+        background-color: #7a7a7a;
+        height: 0.25rem;
         z-index: inherit;
         /* animation: background-size 8s linear 0s infinite alternate; */
     }
