--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,37 @@ body {
     height: 100vh;
 }
 
+/* VIDEOS IN BACKGROUND OF DIV */
+.video-container {
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+}
+
+.video-container video {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+    z-index: 0;
+}
+
+div#slide1 {
+    background: url('https://upload.wikimedia.org/wikipedia/commons/2/21/Chrysomallon_squamiferum_2.png');
+}
+
+div#slide2 {
+    background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Brachypelma_smithi_2009_G09.jpg/1280px-Brachypelma_smithi_2009_G09.jpg');
+}
+
+div#slide3 {
+    background: url('https://upload.wikimedia.org/wikipedia/commons/e/ed/Cape_dwarf_chameleon_%28Bradypodion_pumilum%29_male.jpg');
+}
+
+div#slide4 {
+    background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Wei%C3%9Fbrusttukan.JPG/1280px-Wei%C3%9Fbrusttukan.JPG');
+}
+
 @media screen and (max-width: 1900px) {
     .container {
         position: relative;
